@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b8a55467d1c3d23ae41887f7752c0f3c5370de6f ChangeLog
+SHA1 ae01959e924c2b36dfca1de9e47555196762dbb5 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 dd6716935ba7da9a75e2216af2d162e1595b9289 META.yml
-SHA1 d123251a5252ff93217531e7ab39a81e802c581e MYMETA.json
-SHA1 3c1fa6fb0c8fbb2fc4ecab4f94b725db781cbe03 MYMETA.yml
-SHA1 351faa35d0cb4ea4ffb6b7db7801ea7a87fae1fc Makefile.PL
+SHA1 1f94a7ee7783ec7f10cc7ac5c206f66ef5204ff9 META.yml
+SHA1 1e514a404667cce53ab9135c09dae82e98dffd41 MYMETA.json
+SHA1 2c14c5d47e3475318aa0678be109806bd2a57c2c MYMETA.yml
+SHA1 7c715b0641da86102a907c8fa968fa967cc25f77 Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 a53e92e95bdc686932d917ea3e3f4577fa275b94 lib/Net/FullAuto.pm
+SHA1 6810c2b5c92be15e9b1989b6008d1f6b5d5682b9 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -54,7 +54,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlBfiHoACgkQJM3IZYB6aOp+8QCdEMlYTZSxtncPtq0wwAgW9YYE
-k/sAn27p41QBsN9gydkiCK37OftIX4lt
-=g5A+
+iEYEARECAAYFAlBfv1IACgkQJM3IZYB6aOqBfQCeK0r8bxA2epldIntVMJWNpQrG
+WPoAoKz16eJGIb2QICOFUrnzPRYW6Z4l
+=ZRAk
 -----END PGP SIGNATURE-----
